--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 
     <modules>
         <module>parent</module>
+        <module>tile-webui</module>
         <module>testing</module>
         <module>core</module>
         <module>visits</module>
