--- a/runner-quarkus/src/main/resources/application.properties
+++ b/runner-quarkus/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = naolo
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost/naolo
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost/
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 
