--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -164,6 +164,7 @@
                         <tile>net.kemitix.tiles:testing:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.tiles:coverage:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.tiles:pitest:${kemitix-maven-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:frontend:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.checkstyle:tile:${kemitix-checkstyle.version}</tile>
                     </tiles>
                 </configuration>
