--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -12,6 +12,10 @@
 
     <artifactId>naolo-webui</artifactId>
 
+    <properties>
+        <pitest.skip>true</pitest.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
