--- a/runner-quarkus/src/main/resources/application.properties
+++ b/runner-quarkus/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Configuration file
 # key = value
 quarkus.http.cors=true
+quarkus.http.root-path=/naolo
 # datasource configuration
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
