--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -52,4 +52,4 @@ jobs:
       - name: setup-native-image
         run: gu install native-image
       - name: build-native-image
-        run: mvn -B verify -Pnative
+        run: mvn -B verify -Pnative -DskipITs
